k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgd
  namespace: pac-sample
  labels:
    app: bgd
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: bgd
