k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: bgd
  namespace: pac-sample
  labels:
    app: bgd
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bgd
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
